# dilaria

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  clippy.toml  grammar.txt  std.md  test.dil  test.sl
.github/workflows/: rust.yml
afl-fuzz/: Cargo.toml
afl-fuzz/in/: program1
afl-fuzz/src/: main.rs
benches/: benchfile.dil  parser.rs
dbg-pls/: Cargo.toml
dbg-pls/src/: impls.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compiler.rs  lex.rs  lex_parse.rs  lexer.rs  parser.rs
src/: alloc.rs  ast.rs  bytecode.rs  compile.rs  errors.rs  gc.rs  lex.rs  lib.rs  main.rs  parse.rs  string.rs  util.rs  value.rs  vm.rs
src/bird/: mem.rs  mod.rs
src/parse/: mod.rs  test.rs
src/runtime/: bytecode.rs  gc.rs  mod.rs  stack_frame.rs  vm.rs
src/snapshots/: dilaria__lex__test__braces_brackets_parens_whitespace.snap  dilaria__lex__test__comments.snap  dilaria__lex__test__countdown.snap  dilaria__lex__test__fancy_stuff.snap  dilaria__lex__test__greater_than_less_than_equal.snap  dilaria__lex__test__greeting.snap  dilaria__lex__test__keyword_and_ident.snap  dilaria__lex__test__keywords.snap  dilaria__lex__test__larger_numbers.snap  dilaria__lex__test__long_multiline_comment.snap  dilaria__lex__test__no_no_no.snap  dilaria__lex__test__not_quite_a_keyword.snap  dilaria__lex__test__serious_program.snap  dilaria__lex__test__smiley_face.snap  dilaria__lex__test__string.snap  dilaria__lex__test__strings.snap  dilaria__lex__test__terminate_multiline_comment_correctly.snap  dilaria__lex__test__trailing_underscore_number.snap  dilaria__lex__test__underscore_number.snap
src/syntax/: ast.rs  lex.rs  parse.rs
tests/: common.rs  control_flow.rs  functions.rs
tests/snapshots/: control_flow__break_out_loop.snap  control_flow__break_out_while.snap  control_flow__fizzbuzz.snap  control_flow__fizzbuzz_with_loop.snap  control_flow__if_else.snap  control_flow__if_else_if.snap  control_flow__if_else_long_comparison_chain.snap  control_flow__nested_loop_break.snap  control_flow__single_if.snap  control_flow__while_count_to_100.snap  control_flow__while_run_never.snap  (+6 more)
(+196 files in other folders)
