[package]
name = "dilaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.8.0", features = ["collections"] }
rustc-hash = { version = "1.1.0", optional = true }

debug2 = { version = "0.1.0", optional = true }


[features]
fxhash = ["rustc-hash"]
_debug = ["debug2"]

# todo: we don't actually want this as a default feature
default = ["_debug"]

[dev-dependencies]
insta = "1.9.0"
