[package]
name = "dilaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.8.0", features = ["collections"] }
dbg-pls = { version = "0.2.2", features = ["colors", "derive"] }
